@@ -5,6 +5,7 @@
 
 1.55_11 2018-11-?? rurban
         * CC 1.16_02: Fixup illegal goto lab_0; (#425)
+        * C: Support -cross=<path/config.sh> (#428)
 
 1.55_10 2018-11-06 rurban
         * C: Add missing optimize flags
